finish hwlesson6